parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements statement
Rule 3     expression -> STRING
Rule 4     expression -> SYMBOL
Rule 5     statement -> PRINTLN COLON expression
Rule 6     statement -> LET SYMBOL EQUALS STRING

Terminals, with rules where they appear

COLON                : 5
EQUALS               : 6
LET                  : 6
PRINTLN              : 5
STRING               : 3 6
SYMBOL               : 4 6
error                : 

Nonterminals, with rules where they appear

expression           : 5
statement            : 1 2
statements           : 2 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements statement
    (5) statement -> . PRINTLN COLON expression
    (6) statement -> . LET SYMBOL EQUALS STRING

    PRINTLN         shift and go to state 3
    LET             shift and go to state 4

    statements                     shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> statements .
    (2) statements -> statements . statement
    (5) statement -> . PRINTLN COLON expression
    (6) statement -> . LET SYMBOL EQUALS STRING

    PRINTLN         shift and go to state 3
    LET             shift and go to state 4

    statement                      shift and go to state 5

state 2

    (1) statements -> statement .

    PRINTLN         reduce using rule 1 (statements -> statement .)
    LET             reduce using rule 1 (statements -> statement .)
    $end            reduce using rule 1 (statements -> statement .)


state 3

    (5) statement -> PRINTLN . COLON expression

    COLON           shift and go to state 6


state 4

    (6) statement -> LET . SYMBOL EQUALS STRING

    SYMBOL          shift and go to state 7


state 5

    (2) statements -> statements statement .

    PRINTLN         reduce using rule 2 (statements -> statements statement .)
    LET             reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)


state 6

    (5) statement -> PRINTLN COLON . expression
    (3) expression -> . STRING
    (4) expression -> . SYMBOL

    STRING          shift and go to state 9
    SYMBOL          shift and go to state 10

    expression                     shift and go to state 8

state 7

    (6) statement -> LET SYMBOL . EQUALS STRING

    EQUALS          shift and go to state 11


state 8

    (5) statement -> PRINTLN COLON expression .

    PRINTLN         reduce using rule 5 (statement -> PRINTLN COLON expression .)
    LET             reduce using rule 5 (statement -> PRINTLN COLON expression .)
    $end            reduce using rule 5 (statement -> PRINTLN COLON expression .)


state 9

    (3) expression -> STRING .

    PRINTLN         reduce using rule 3 (expression -> STRING .)
    LET             reduce using rule 3 (expression -> STRING .)
    $end            reduce using rule 3 (expression -> STRING .)


state 10

    (4) expression -> SYMBOL .

    PRINTLN         reduce using rule 4 (expression -> SYMBOL .)
    LET             reduce using rule 4 (expression -> SYMBOL .)
    $end            reduce using rule 4 (expression -> SYMBOL .)


state 11

    (6) statement -> LET SYMBOL EQUALS . STRING

    STRING          shift and go to state 12


state 12

    (6) statement -> LET SYMBOL EQUALS STRING .

    PRINTLN         reduce using rule 6 (statement -> LET SYMBOL EQUALS STRING .)
    LET             reduce using rule 6 (statement -> LET SYMBOL EQUALS STRING .)
    $end            reduce using rule 6 (statement -> LET SYMBOL EQUALS STRING .)

